k3s-aws/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-compliance-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-test
  template:
    metadata:
      labels:
        app: redis-test
    spec:
      containers:
      - name: redis
        # 🚨 ERREUR : Utilisation de 'latest'
        # OPA doit intercepter ceci et faire échouer la pipeline
        image: redis:latest
        ports:
        - containerPort: 6379
